Customized to Evine, added config

--- a/public/index.html
+++ b/public/index.html
@@ -4,16 +4,36 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Jai Ambe Homes | Mumbai's Best Real Estate Consultant #GoodbyeHeadaches" />
+  <meta name="description" content="Evine Real Estate Website Demo From Zenoholics" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
 
   <!-- Get Google Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Sen:wght@400;700;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet"> -->
+
+  <!-- Setup local fonts -->
+  <style>
+    @font-face {
+      font-family: 'Avenir Next';
+      src: url('%PUBLIC_URL%/fonts/AvenirNextLTPro-Regular.otf') format('opentype');
+    }
+
+    @font-face {
+      font-family: 'Avenir Next';
+      src: url('%PUBLIC_URL%/fonts/AvenirNextLTPro-Bold.otf') format('opentype');
+      font-weight: bold;
+    }
+
+    @font-face {
+      font-family: 'Avenir Next';
+      src: url('%PUBLIC_URL%/fonts/AvenirNextLTPro-It.otf') format('opentype');
+      font-style: italic;
+    }
+  </style>
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json?v=2.0" />
   <!--
@@ -28,11 +48,11 @@
   <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png?v=2.0">
   <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png?v=2.0">
   <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png?v=2.0">
-  <link rel="mask-icon" href="%PUBLIC_URL%/safari-pinned-tab.svg?v=2.0" color="#78621e">
+  <link rel="mask-icon" href="%PUBLIC_URL%/safari-pinned-tab.svg?v=2.0" color="#fde8ed">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico?v=2.0">
-  <meta name="msapplication-TileColor" content="#78621e">
-  <meta name="theme-color" content="#78621e">
-  <title>Jai Ambe Homes</title>
+  <meta name="msapplication-TileColor" content="#fde8ed">
+  <meta name="theme-color" content="#fde8ed">
+  <title>Evine Realtors</title>
 </head>
 
 <body>
